--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,10 @@
 RubyTreemap - ChangeLog
 ===============================================================================
 
+2015-05-05
+	* Moved code to github
+	* Merged pull requests from matkoniecz
+
 2008-11-23
 	* Applied patch from Peter Krantz
 		- Enables svg output with centered labels
